add app skeleton in App component and make Checkout component a dialog

--- a/src/app/components/app/app.component.html
+++ b/src/app/components/app/app.component.html
@@ -1,1 +1,13 @@
-<app-checkout></app-checkout>
+<header>
+  <mat-toolbar color="primary">
+    <span>Nuestra tienda</span>
+  </mat-toolbar>
+</header>
+
+<main class="app-main">
+  <h1>Nuestros productos</h1>
+</main>
+
+<footer class="app-footer">
+  Desarrollado por Darío Scattolini, Noviembre de 2021
+</footer>
