--- a/src/app/components/article/article.component.html
+++ b/src/app/components/article/article.component.html
@@ -1,3 +1,3 @@
-<p>Name: {{ name }}</p>
-<p>Price: {{ price }}</p>
-<p>Image path: {{ imgPath }}</p>
+<img src="assets/images/{{ imgPath }}" alt="{{ name }}">
+<p class="name">{{ name }}</p>
+<p class="price">{{ price }}</p>
