add id field to articles; refactor checkout component moving all form fields to CreditCardForm component

--- a/src/app/components/checkout/checkout.component.html
+++ b/src/app/components/checkout/checkout.component.html
@@ -18,27 +18,7 @@
   
   <p class="right sidelines">Or pay with card</p>
   
-  <div class="right">
-    <mat-form-field appearance="outline" class="full-width">
-      <mat-label>Email</mat-label>
-      <input matInput placeholder="johnsmith@gmail.com" [formControl]="email" required>
-      <mat-error *ngIf="email.invalid">{{ getErrorMessage('email') }}</mat-error>
-    </mat-form-field>
-  </div>
-  
-  <app-credit-card-input class="right"></app-credit-card-input>
-
-  <div class="right">
-    <mat-form-field appearance="outline" class="full-width">
-      <mat-label>Country or region</mat-label>
-      <mat-select [formControl]="country" required>
-        <mat-option *ngFor="let country of countries" value="country.code">
-          {{ country.name }}
-        </mat-option>
-      </mat-select>
-      <mat-error *ngIf="country.invalid">{{ getErrorMessage('country') }}</mat-error>
-    </mat-form-field>
-  </div>
+  <app-credit-card-form #creditCard class="right"></app-credit-card-form>
 
   <button mat-raised-button 
     color="primary" 
