disable Pay button if there are invalid fields

--- a/src/app/components/checkout/checkout.component.html
+++ b/src/app/components/checkout/checkout.component.html
@@ -22,7 +22,8 @@
 
   <button mat-raised-button 
     color="primary" 
-    (click)="pay('card')" 
+    (click)="pay('card')"
+    [disabled]="!creditCard.isValid"
     class="right full-width"
   >
     Pay {{ article.price }}
