--- a/src/app/components/checkout/checkout.component.scss
+++ b/src/app/components/checkout/checkout.component.scss
@@ -34,9 +34,10 @@ $horizontal-gap: 1em;
 /*** Powered by RedSys ***/
 
 .redsys {
+  width: 100%;
   margin-top: 1em;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: flex-end;
   flex-wrap: wrap;
   font-size: 0.9em;
