--- a/src/app/components/credit-card-input/credit-card-form.component.html
+++ b/src/app/components/credit-card-input/credit-card-form.component.html
@@ -70,22 +70,24 @@
   </mat-error>
 </mat-form-field>
 
-<mat-form-field appearance="outline" class="full-width">
-  <mat-label>Country or region</mat-label>
+<div class="row">
+  <mat-form-field appearance="outline" class="full-width">
+    <mat-label>Country/Region</mat-label>
+    
+    <mat-select [formControl]="country" required>
+      <mat-option *ngFor="let country of countries" value="{{ country.code }}">
+        {{ country.name }}
+      </mat-option>
+    </mat-select>
+    
+    <mat-error *ngIf="country.invalid">
+      {{ getErrorMessage('country') }}
+    </mat-error>
+  </mat-form-field>
   
-  <mat-select [formControl]="country" required>
-    <mat-option *ngFor="let country of countries" value="{{ country.code }}">
-      {{ country.name }}
-    </mat-option>
-  </mat-select>
-  
-  <mat-error *ngIf="country.invalid">
-    {{ getErrorMessage('country') }}
-  </mat-error>
-</mat-form-field>
-
-<mat-form-field class="full-width" appearance="outline">
-  <mat-label>Zip Code</mat-label>
-  
-  <input matInput placeholder="40170" [formControl]="zipCode">
-</mat-form-field>
+  <mat-form-field class="full-width" appearance="outline">
+    <mat-label>Zip Code</mat-label>
+    
+    <input matInput placeholder="40170" [formControl]="zipCode">
+  </mat-form-field>
+</div>
