modify gray color and spacing

--- a/src/app/components/article/article.component.scss
+++ b/src/app/components/article/article.component.scss
@@ -12,12 +12,12 @@ img {
 .name {
   font-size: 1.2em;
   font-weight: 500;
-  color: #747880;
-  margin-bottom: 1em;
+  color: #71757e;
+  margin-bottom: 2em;
 }
 
 .price {
   font-size: 2.5em;
   font-weight: 500;
-  margin-bottom: 1em;
+  margin-bottom: 2em;
 }
