change links style

--- a/src/app/components/checkout/checkout.component.html
+++ b/src/app/components/checkout/checkout.component.html
@@ -1,10 +1,10 @@
 <mat-dialog-content>
   <div>
     <p class="back-to-market">
-      <a mat-button [matDialogClose]>
+      <button mat-button [matDialogClose]>
         <mat-icon aria-label="Back to the market">arrow_back</mat-icon>
         Back to the market
-      </a>
+      </button>
     </p>
     
     <app-article [article]="article"></app-article>
