--- a/src/app/components/checkout/checkout.component.html
+++ b/src/app/components/checkout/checkout.component.html
@@ -16,6 +16,7 @@
       (click)="pay('apple-pay')" 
       class="full-width pay-button"
     >
+      <mat-icon svgIcon="apple_logo" [inline]="true"></mat-icon>
       Pay
     </button>
     
