--- a/src/app/components/checkout/checkout.component.scss
+++ b/src/app/components/checkout/checkout.component.scss
@@ -28,6 +28,13 @@ $horizontal-gap: 1em;
 
 /*** Pay buttons ***/
 
+.pay-button mat-icon {
+  height: 1.5em;
+  vertical-align: text-bottom;
+  margin-right: 0.3em;
+  filter: invert(100%);
+}
+
 .pay-button {
   margin-bottom: 2em;
 }
