--- a/src/app/components/credit-card-input/credit-card-form.component.html
+++ b/src/app/components/credit-card-input/credit-card-form.component.html
@@ -71,19 +71,7 @@
 </mat-form-field>
 
 <div class="row">
-  <mat-form-field appearance="outline" class="full-width">
-    <mat-label>Country/Region</mat-label>
-    
-    <mat-select [formControl]="country" required>
-      <mat-option *ngFor="let country of countries" value="{{ country.code }}">
-        {{ country.name }}
-      </mat-option>
-    </mat-select>
-    
-    <mat-error *ngIf="country.invalid">
-      {{ getErrorMessage('country') }}
-    </mat-error>
-  </mat-form-field>
+  <app-country-selector #country [required]="true"></app-country-selector>
   
   <mat-form-field class="full-width" appearance="outline">
     <mat-label>Zip Code</mat-label>
