add reload component button

--- a/src/app/components/app/app.component.html
+++ b/src/app/components/app/app.component.html
@@ -1,13 +1,16 @@
 <header>
   <mat-toolbar color="primary">
-    <span>Nuestra tienda</span>
+    <span>Our store</span>
   </mat-toolbar>
 </header>
 
 <main class="app-main">
-  <h1>Nuestros productos</h1>
+  <h1>Our products</h1>
+  <button mat-raised-button color="primary" (click)="load()">
+    Reload checkout component
+  </button>
 </main>
 
 <footer class="app-footer">
-  Desarrollado por Darío Scattolini, Noviembre de 2021
+  Developed by Darío Scattolini, November 2021
 </footer>
